# health-pilot

./: .env.example  .gitignore  AGENTS.md  AGENT_DESIGN.md  README.md  config.py  main.py  pyproject.toml
agents/: coach.py
evaluation/: test_cases.md
models/: database.py
openspec/changes/add-proactive-care/: .openspec.yaml  design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-19-smart-dining-assistant/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-19-smart-dining-assistant/specs/coach-agent/: spec.md
openspec/changes/archive/2026-03-19-smart-dining-assistant/specs/fridge-recipe-generator/: spec.md
openspec/changes/archive/2026-03-19-smart-dining-assistant/specs/meal-prep-planner/: spec.md
openspec/changes/archive/2026-03-19-smart-dining-assistant/specs/visual-menu-analysis/: spec.md
openspec/changes/health-coach-mvp/: design.md  proposal.md  tasks.md
openspec/changes/health-coach-mvp/specs/coach-conversation/: spec.md
openspec/changes/health-coach-mvp/specs/data-analysis/: spec.md
openspec/changes/health-coach-mvp/specs/diet-tracking/: spec.md
openspec/changes/health-coach-mvp/specs/exercise-tracking/: spec.md
openspec/changes/health-coach-mvp/specs/proactive-push/: spec.md
openspec/changes/health-coach-mvp/specs/user-profile/: spec.md
openspec/changes/health-coach-mvp/specs/weight-tracking/: spec.md
scheduler/: push_scheduler.py
tools/: data_analyzer.py  exercise_tracker.py  meal_planner.py  meal_tracker.py  user_profile_manager.py  visual_analyzer.py  weight_tracker.py
