[project]
name = "health-pilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno[os]>=2.5.4",
    "anthropic>=0.84.0",
    "apscheduler>=3.11.2",
    "fastapi>=0.133.0",
    "openai>=2.24.0",
    "opentelemetry-api>=1.39.1",
    "opentelemetry-sdk>=1.39.1",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "sqlalchemy>=2.0.47",
    "uvicorn[standard]>=0.41.0",
]
